# radon-template-matching

./: .gitignore  CMakeLists.txt  README.md  evaluate_coil20.py  evaluate_datasets.py  evaluate_noise_robustness.py  evaluate_realistic.py  main.cpp  radon_template_matching.cpp  radon_template_matching.hpp  radon_template_matching.py  requirements.txt
docs/: hf_energy_minimization_study.md  hough_voting.md  noise_robustness_study.md
